# viper-pm

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  rules
docs/: PACKAGING.md  RELEASING.md
examples/: heartbeat.py  viper.yml
src/viper_pm/: cli.py  daemon.py  ipc.py  paths.py  spec.py  state.py  supervisor.py  tailer.py
tests/: test_integration.py  test_spec.py
